test/errhandling/stacktrace/basic.2-0.good
caught error: oops
stack trace:
  (frame 1) basic.chpl:14
  (frame 2) basic.chpl:8
  (frame 3) basic.chpl:5
  (frame 4) basic.chpl:2
uncaught Error: oops
  basic.chpl:24: uncaught here
  basic.chpl:24: called from here
  basic.chpl:8: called from here
  basic.chpl:5: called from here
  basic.chpl:2: thrown here
